# dayz

./: .gitattributes  .gitignore  COMFYUI-HANDOFF.md  LAUNCHER-GUIDE.md  LICENSE  README.md  ROADMAP.md  analyze_errors.py  capture-dayz-error.sh  generate_dayz_assets.py  launch_with_recovery.ps1  monitor_dayz.ps1  pyproject.toml  quick_test.ps1  start-dayz-stack.ps1
.claude/: CLAUDE.md  README.md  dayz-debugger.md  settings.local.json
.claude/skills/: dayz-modding.md
.factory/droids/: dayz-debug.md
backends/: SECURITY.md
backends/bosssignal-backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  requirements-dev.txt  requirements.txt
backends/bosssignal-backend/app/: auth.py  config.py  main.py
backends/bosssignal-backend/static/: dashboard.html
backends/bosssignal-backend/tests/: conftest.py  test_events_idempotency.py  test_loaded_mods.py  test_security.py  test_top_damager.py  test_trophies.py
backends/hiveapi/: .env.example  .gitignore  DEMO_GUIDE.md  INTEGRATION_EXAMPLES.md  Makefile  QUICK_START.md  alembic.ini  render.yaml  requirements.txt
backends/hiveapi/app/: config.py  deps.py  main.py
backends/hiveapi/migrations/: env.py
backends/hiveapi/ops/: Dockerfile  docker-compose.override.yml  docker-compose.yml  entrypoint.sh
backends/hiveapi/scripts/: demo_seed.py
backends/hiveapi/tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  (+2 more)
build-pipeline/: build.bat  pack-all.bat  sign-keygen.bat
build-pipeline/keys/: BossSignal.bikey  HiveApiMod.bikey  MarksContent.bikey  TrophyHunter.bikey
build-pipeline/test-harness/: servers.example.txt  simulate_boss_encounter.py
dayz-mcp/: __init__.py  pyproject.toml  server.py
dayz-memory/: README.md  __init__.py  __main__.py  capture_session_2026_05_17.py  docker-compose.yml  models.py  pyproject.toml  schema.py  seed.py  server.py  test_live_capture.py  test_search.py
dayz-memory/hooks/: auto_capture.ps1  run_auto_capture_hidden.vbs
docs/integrations/: claude-code-mcp.md  hiveapi-audit-2026-05-07.md
docs/modding/: test-bosssignal.md  test-hiveapimod.md  test-markscontent.md  test-trophyhunter.md
docs/modding-source/: DEVLOG.md  FIRST-PLAY-CHECKLIST.md  HIVE-AUDIT.md  TROPHYHUNTER-PREDEPLOY.md  dayz-modding-patterns.md
docs/operations/: runbook-local-stack.md  runbook-snapshotter.md
frontends/web-ui/: .env.example  .eslintrc.cjs  DASHBOARD-README.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
mods/BossSignal/: BossSignal.pboproject  config.cpp  integration-example.c
mods/HiveApiMod/: HiveApiMod.pboproject  QUICK_START.md  README.md  config.cpp
mods/MarksContent/: MarksContent.pboproject  config.cpp
mods/TrophyHunter/: TrophyHunter.pboproject  config.cpp
planning/: 01-adapted-plan.md  04-snapshotter-runbook.md  05-corpus-quality-check.md  06-tool-samples.md  06-traderplus-investigation.md  diagnostic-capture-proposal-2026-05-17.md  in-game-test-troubleshoot-2026-05-17.md  known-issues-2026-05-17.md
planning/scripts/: probe_cloudscraper.py
platform/: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  GETTING-STARTED.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
platform/config_mod/: pyproject.toml
platform/config_mod/migrations/: env.py
platform/config_mod/migrations/versions/: 0001_parsed_configs.py
platform/config_mod/src/dayzstack_config/: __init__.py  cli.py  diff.py  models.py  persistence.py  registry.py  types.py
platform/config_mod/src/dayzstack_config/parsers/: __init__.py  base.py  cfgeventspawns_xml.py  cfgspawnabletypes_xml.py  expansion_json.py  types_xml.py
platform/docs/: strategic-context.md
platform/docs/architecture/: config-layer.md  intel-layer.md  kb-layer.md  tools-layer.md
platform/docs/operations/: runbook-snapshotter.md
platform/docs/reference/: corpus-inventory.md  data-sources.md  known-debt.md
platform/infra/: setup-snapshotter.ps1
platform/intel/: pyproject.toml
platform/intel/migrations/: env.py
platform/intel/migrations/versions/: 0001_workshop_snapshots.py  0002_server_snapshots.py
platform/intel/src/dayzstack_intel/: __init__.py  cli.py  models.py  server_snapshotter.py  snapshotter.py  steam.py
platform/intel/src/dayzstack_intel/sources/: battlemetrics.py
platform/kb/: pyproject.toml
platform/kb/migrations/: env.py
platform/kb/migrations/versions/: 0001_initial_schema.py
platform/kb/src/dayzstack_kb/: __init__.py  chunking.py  cli.py  embeddings.py  ingest.py  models.py  search.py
platform/kb/src/dayzstack_kb/mcp/: __init__.py  server.py
platform/kb/src/dayzstack_kb/scrapers/: __init__.py  base.py  bistudio_wiki.py  github_mods.py  local_repo.py  workshop_local.py
platform/shared/: pyproject.toml
platform/shared/src/dayzstack_shared/: __init__.py  config.py  db.py  logging.py
platform/tools/: pyproject.toml
platform/tools/src/dayzstack_tools/: __init__.py  cli.py
research/: 01-repo-inventory.md  02-original-intent.md  03-what-was-broken.md  04-stack-architecture.md  05-scene-map.md  06-leverage-points.md  07-plan.md  08-whats-full-and-paid.md  09-market-teardown.md
tools-extra/modctl/: .gitignore  README.md  mods.yaml  pyproject.toml
tools-extra/modctl/modctl/: __init__.py  __main__.py  cli.py  config.py  diagnosis.py  errors.py  output.py
tools-extra/modctl/modctl/actions/: addon_builder.py  dayz_server.py  filesystem.py  runner.py  watcher.py
tools-extra/modctl/modctl/orchestration/: build.py  deploy.py  diagnose.py  doctor.py  fix.py  restart.py  serve.py  ship.py  tail.py  watch.py
tools-extra/modctl/modctl/rules/: enforce.yaml
tools-extra/modctl/tests/: test_addon_builder.py  test_build.py  test_cli.py  test_config.py  test_dayz_server.py  test_deploy.py  test_diagnose.py  test_diagnosis.py  test_doctor.py  test_errors.py  test_filesystem.py  test_fix.py  test_output.py  test_restart.py  test_runner.py  test_serve.py  test_ship.py  test_tail.py  test_watch.py  test_watcher.py
tools-extra/modctl/tests/fixtures/: mods.example.yaml
tools-extra/testharness-mod/: README.md  config.cpp
(+77 files in other folders)
