[project]
name = "dayz-memory"
version = "0.1.0"
description = "Graph-based knowledge system for DayZ mod development"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "neo4j>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
