[project]
name = "dayzstack-config"
version = "0.0.1"
description = "Layer 4 foundation — DayZ config parsers (types.xml, cfgspawnabletypes, mission/Expansion configs) + diff + persistence"
requires-python = ">=3.11"
dependencies = [
    "dayzstack-shared",
    "dayzstack-kb",        # for the MCP server we extend
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "lxml>=5.0",
    "click>=8.1",
    "pydantic>=2.7",
]

[project.scripts]
dayz-stack-config = "dayzstack_config.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dayzstack_config"]
