[project]
name = "dayzstack-intel"
version = "0.0.1"
description = "Layer 2 — DayZ Workshop intel (snapshotter, velocity, staleness, reports)"
requires-python = ">=3.11"
dependencies = [
    "dayzstack-shared",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "click>=8.1",
    "tenacity>=9.0",
    "tqdm>=4.66",
]

[project.scripts]
dayz-stack-intel = "dayzstack_intel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dayzstack_intel"]
