[project]
name = "dayzstack-kb"
version = "0.0.1"
description = "Layer 1 — knowledge base for DayZ modding (scrapers, embeddings, search, MCP)"
requires-python = ">=3.11"
dependencies = [
    "dayzstack-shared",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "markdownify>=0.13",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tiktoken>=0.7",
    "click>=8.1",
    "fastmcp>=0.4",
    "tqdm>=4.66",
]

[project.scripts]
dayz-stack-kb = "dayzstack_kb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dayzstack_kb"]
