[project]
name = "dayzstack-shared"
version = "0.0.1"
description = "Cross-layer shared lib — config, db, http, logging"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "httpx>=0.27",
    "structlog>=24.0",
    "tenacity>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dayzstack_shared"]
