[project]
name = "dayzstack-tools"
version = "0.0.1"
description = "Operator-facing CLI tools — stack health, cross-server comparator"
requires-python = ">=3.11"
dependencies = [
    "dayzstack-shared",
    "click>=8.1",
    "neo4j>=5,<6",
]

[project.scripts]
dayz-stack = "dayzstack_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dayzstack_tools"]
